Support static native images